@@ -9,7 +9,6 @@ import java.awt.event.MouseEvent;
 import java.awt.event.MouseMotionListener;
 import java.awt.image.BufferedImage;
 import java.io.File;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Random;
@@ -53,7 +52,7 @@ public class ClassificationImageDemo extends LogWeightingDemo implements ActionL
   private static final Random RANDOM = new Random();
 
   private static List<Biinvariant> distinct() {
-    return Arrays.asList( //
+    return List.of( //
         MetricBiinvariant.EUCLIDEAN, // FIXME ASCONA ALG should be retrieved from bitype
         Biinvariants.LEVERAGES, //
         Biinvariants.GARDEN);
