@@ -6,7 +6,6 @@ import java.awt.Dimension;
 import java.awt.Graphics2D;
 import java.awt.geom.Path2D;
 import java.awt.image.BufferedImage;
-import java.util.Arrays;
 import java.util.List;
 
 import javax.swing.JSlider;
@@ -34,8 +33,8 @@ import ch.alpine.tensor.api.TensorUnaryOperator;
 import ch.alpine.tensor.itp.DeBoor;
 
 /* package */ class DuckietownSmoothingDemo extends AbstractDatasetKernelDemo implements BufferedImageSupplier {
-  private static final List<Integer> DEGREES = Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
-  public static final List<String> LIST = Arrays.asList( //
+  private static final List<Integer> DEGREES = List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+  public static final List<String> LIST = List.of( //
       "duckie20180713-175124.csv", //
       "duckie20180713-175420.csv", //
       "duckie20180713-175601.csv", //
