@@ -7,7 +7,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -21,7 +21,7 @@ class UzhSe3TxtFormatTest {
     File file = new File("/media/datahaki/media/resource/uzh/groundtruth", "outdoor_forward_5_davis.txt");
     if (file.isFile()) {
       Tensor tensor = UzhSe3TxtFormat.of(file);
-      assertEquals(Dimensions.of(tensor), Arrays.asList(22294, 4, 4));
+      assertEquals(Dimensions.of(tensor), List.of(22294, 4, 4));
       assertFalse(StringScalarQ.any(tensor));
     }
   }
